--- a/mm.html
+++ b/mm.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WELCOME TO DEVOLOPERS AND OPERATIONS</h1></h1>
+    <h1>welcome to devops</h1></h1>
 </body>
 </html>
